--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,19 @@
 {
-  "name": "Environment warning",
+  "name": "Environment Warning",
   "version": "1.0",
-  "description": "Build an Extension!",
-  "permissions": ["activeTab", "declarativeContent", "storage"],
+  "description": "Warns about the current environment (Production/Staging/Development)",
+  "permissions": ["activeTab", "storage", "tabs", "scripting", "declarativeContent"],
+  "host_permissions": ["<all_urls>"],
   "options_page": "options.html",
   "background": {
-    "scripts": ["background.js"],
-    "persistent": false
+    "service_worker": "background.js"
   },
-  "content_scripts": [ {
+  "content_scripts": [{
     "matches": ["<all_urls>"],
-    "js": ["content.js"]
-  } ],
-  "page_action": {
+    "js": ["content.js"],
+    "run_at": "document_end"
+  }],
+  "action": {
     "default_popup": "popup.html",
     "default_icon": {
       "16": "images/get_started16.png",
@@ -27,5 +28,5 @@
     "48": "images/get_started48.png",
     "128": "images/get_started128.png"
   },
-  "manifest_version": 2
+  "manifest_version": 3
 }
